Se implementaron patrocinadores, se creó proceso para obtener datos del patrocinador y se actualizó flujo para resolver dependencias en controladores.

--- a/CodeAndPlay.Business/CodeAndPlay.Business.csproj
+++ b/CodeAndPlay.Business/CodeAndPlay.Business.csproj
@@ -64,9 +64,11 @@
   <ItemGroup>
     <Compile Include="Commons\Constants.cs" />
     <Compile Include="Contracts\IOrganizerProcess.cs" />
+    <Compile Include="Contracts\ISponsorProcess.cs" />
     <Compile Include="DependencyInjection\BusinessModule.cs" />
     <Compile Include="Process\Abstract\ProcessBase.cs" />
     <Compile Include="Process\OrganizerProcess.cs" />
+    <Compile Include="Process\SponsorProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
