--- a/CodeAndPlay.API/CodeAndPlay.API.csproj
+++ b/CodeAndPlay.API/CodeAndPlay.API.csproj
@@ -166,6 +166,7 @@
     <Compile Include="App_Start\NinjectConfig.cs" />
     <Compile Include="App_Start\OAuthConfig.cs" />
     <Compile Include="Controllers\OrganizerController.cs" />
+    <Compile Include="Controllers\SponsorController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
