--- a/CodeAndPlay.API/CodeAndPlay.API.csproj
+++ b/CodeAndPlay.API/CodeAndPlay.API.csproj
@@ -167,6 +167,8 @@
     <Compile Include="App_Start\OAuthConfig.cs" />
     <Compile Include="Controllers\OrganizerController.cs" />
     <Compile Include="Controllers\SponsorController.cs" />
+    <Compile Include="Controllers\TalkController.cs" />
+    <Compile Include="Controllers\WorkshopController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
